[package]
name = "commonregex_rs"
version = "0.1.0"
authors = ["Samy Kacimi <samy.kacimi@icloud.com>"]
description = "🔎 Find common expressions in a string"
edition = "2018"
license = "MIT"
repository = "https://github.com/fakenine/commonregex-rs"
keywords = ["regex", "commonregex", "pattern matching"]
categories = ["parsing"]

[dependencies]
regex = "1"
